--- a/web/public/jslinux/index.html
+++ b/web/public/jslinux/index.html
@@ -14,13 +14,12 @@ display: block;
 <button id="do_the_thing">Do The Thing</button>
 <link rel="stylesheet" href="../xterm/css/xterm.css"/>
 <script src="../xterm/lib/xterm.js"></script>
-<script src="term.js"></script>
 <script src="jslinux-core.js"></script>
 <script language="JavaScript">
 
     function doTheThing() {
-        const filename = "take1.tar"
-        const test_tar_path = "../kconfig_bundles/take1.tar"
+        const filename = window.prompt()
+        const test_tar_path = "../kconfig_bundles/" + filename
         fetch(test_tar_path).then( (response) => {
             console.log(response)
             response.arrayBuffer().then( (buf) => {
