--- a/web/public/kconfig.html
+++ b/web/public/kconfig.html
@@ -6,16 +6,23 @@
         body {
             background-color: slategray
         }
+
+        #page_container {
+            width: 760px;
+            margin: 0 auto;
+        }
+
         #terminal_container {
             border: 20px darkgray solid;
             border-radius: 5px;
             box-shadow: 0 0 20px 0;
             margin: 10px;
             width: 740px;
-            height: auto;
+            min-height: 550px;
             display: block;
             background-color: darkgray;
         }
+
         #terminal {
             border: 10px black solid;
             border-radius: 5px;
@@ -23,8 +30,45 @@
             background-color: black;
         }
 
+        #terminal.blurred {
+            filter: blur(2px);
+        }
+
         #form_v3_submit {
             float: right;
+        }
+
+        .modal_frame {
+            display: none;
+            z-index: 9999;
+            position: absolute;
+            width: 740px;
+            height: 530px;
+            margin-right: auto;
+            margin-bottom: auto;
+        }
+
+        .modal_frame.modal_active {
+            display: initial;
+        }
+
+        .modal_inner {
+            filter: none;
+            background-color: darkgray;
+            margin: 50px auto;
+            padding: 10px;
+            width: 250px;
+            text-align: center;
+            box-shadow: 5px 5px 20px 2px gray;
+        }
+
+        .modal_inner button {
+            width: 230px;
+            margin-top: 5px;
+        }
+
+        .modal_inner button :nth-of-type(1) {
+            margin-top: 0;
         }
 
         .led {
@@ -40,52 +84,72 @@
         }
 
         .led.led_amber {
-            background-color: #444400
+            background-color: #443200
         }
 
         .led.led_amber.led_on {
-            background-color: #AAAA00
+            background-color: #CC8800
+        }
+
+        .led.led_red {
+            background-color: #300;
+        }
+
+        .led.led_red.led_on {
+            background-color: #C00;
         }
 
     </style>
 </head>
 <body onload="kbs_init()">
-<div id="terminal_container">
-    <div id="control_strip"><form id="kconfig_form_v3">
-        <label for="form_v3_upstream">Variant:</label>
-        <select id="form_v3_upstream">
-            <option value="klipper" selected>Klipper</option>
-            <option value="kalico">Kalico</option>
-        </select>
-        <label for="form_v3_version">Version:</label>
-        <select id="form_v3_version">
-            <option value="default" selected>Default</option>
-            <option value="fake" disabled>(more soon)</option>
-        </select>
-        <input type="radio" id="form_v3_config_scratch" name="form_v3_config" checked/>
-        <label for="form_v3_config_scratch">Empty</label>
-        <input type="radio" id="form_v3_config_file" name="form_v3_config"/>
-        <label for="form_v3_config_file">File</label>
-        <input type="file" id="form_v3_config_file_chooser"/>
-        <button id="form_v3_submit">Go!</button>
-    </form></div>
-    <div id="terminal_container_inner">
-        <div id="terminal"></div>
+<div id="page_container">
+    <h1>KBS Online Menuconfig</h1>
+    <div id="terminal_container">
+        <div id="control_strip"><form id="kconfig_form_v3">
+            <label for="form_v3_upstream">Variant:</label>
+            <select id="form_v3_upstream">
+                <option value="klipper" selected>Klipper</option>
+                <option value="kalico">Kalico</option>
+            </select>
+            <label for="form_v3_version">Version:</label>
+            <select id="form_v3_version">
+                <option value="default" selected>Default</option>
+                <option value="fake" disabled>(more soon)</option>
+            </select>
+            <input type="radio" id="form_v3_config_scratch" name="form_v3_config" checked/>
+            <label for="form_v3_config_scratch">Empty</label>
+            <input type="radio" id="form_v3_config_file" name="form_v3_config"/>
+            <label for="form_v3_config_file">File</label>
+            <input type="file" id="form_v3_config_file_chooser"/>
+            <button id="form_v3_submit">Go!</button>
+        </form></div>
+        <div id="terminal_container_inner">
+            <div id="modal_config_done" class="modal_frame">
+                <div class="modal_inner">
+                    <header>Configuration Generated!</header>
+                    <button onclick="download_config('klipper.config');discard_config();">Download it</button>
+                    <button disabled>Queue online build (coming soon)</button>
+                    <button onclick="discard_config()">Discard</button>
+                </div>
+            </div>
+            <div id="terminal"></div>
+        </div>
+        <div id="status_bar">
+            On: <div class="led" id="led_on"></div>
+            Working: <div class="led led_amber" id="led_working"></div>
+            Access: <div class="led led_red" id="led_access"></div>
+            VM State: <span id="vm_state_text">OFF</span>
+        </div>
     </div>
-    <div id="status_bar">
-        On: <div class="led" id="led_on"></div>
-        Access: <div class="led led_amber" id="led_access"></div>
-        VM State: <span id="vm_state_text">OFF</span>
-    </div>
+    <p>
+        This tool makes use of
+        <a href="https://bellard.org/tinyemu">JSLinux</a>,
+        <a href="https://xtermjs.org/">xterm.js</a>.
+    </p>
+    <link rel="stylesheet" href="xterm/css/xterm.css">
+    <script src="xterm/lib/xterm.js"></script>
+    <script src="jslinux/jslinux-core.js"></script>
+    <script src="kbs_menuconfig.js"></script>
 </div>
-<p>
-    This tool makes use of
-    <a href="https://bellard.org/tinyemu">JSLinux</a>,
-    <a href="https://xtermjs.org/">xterm.js</a>.
-</p>
-<link rel="stylesheet" href="xterm/css/xterm.css">
-<script src="xterm/lib/xterm.js"></script>
-<script src="jslinux/jslinux-core.js"></script>
-<script src="kbs_menuconfig.js"></script>
 </body>
 </html>
