--- a/web/public/license.html
+++ b/web/public/license.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<p>KBS is an amalgam of a number of open source projects, KBS's own code is licensed under ?TBD?</p>
+<p>KBS's Online Service (and it's browser based components) are an amalgam of a number of open source projects, KBS's own code is licensed under ?TBD?</p>
 
 <p>KBS also makes use of a number of independent components provided under other licenses: </p>
 
