first swing at build environment

--- a/web/public/license.html
+++ b/web/public/license.html
@@ -18,6 +18,8 @@
 <body>
 <p>KBS's Online Service (and it's browser based components) are an amalgam of a number of open source projects, KBS's own code is licensed under ?TBD?</p>
 
+<p>Notwithstanding the above, the <a href="revisions/kconfig-bundles">kconfig dataset</a> included in the revision database is licensed under the GPLv3, as it is a partial distribution of Klipper (or Kalico) source.</p>
+
 <p>KBS also makes use of a number of independent components provided under other licenses: </p>
 
 <table>
