--- a/web/public/license.html
+++ b/web/public/license.html
@@ -1,73 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>KBS Licenses</title>
     <style>
-        table {
-            border: 2px solid black;
-        }
-        th, td {
-            border: 1px solid gray;
-        }
-        th {
-            border-bottom: black solid 3px;
-        }
+      table {
+        border: 2px solid black;
+      }
+      th,
+      td {
+        border: 1px solid gray;
+      }
+      th {
+        border-bottom: black solid 3px;
+      }
     </style>
-</head>
-<body>
-<p>KBS's Online Service (and it's browser based components) are an amalgam of a number of open source projects, KBS's own code is licensed under ?TBD?</p>
+  </head>
+  <body>
+    <p>
+      KBS's Online Service (and it's browser based components) are an amalgam of
+      a number of open source projects, KBS's own code is licensed under ?TBD?
+    </p>
 
-<p>Notwithstanding the above, the <a href="revisions/kconfig-bundles">kconfig dataset</a> included in the revision database is licensed under the GPLv3, as it is a partial distribution of Klipper (or Kalico) source.</p>
+    <p>
+      Notwithstanding the above, the
+      <a href="revisions/kconfig-bundles">kconfig dataset</a> included in the
+      revision database is licensed under the GPLv3, as it is a partial
+      distribution of Klipper (or Kalico) source.
+    </p>
 
-<p>KBS also makes use of a number of independent components provided under other licenses: </p>
+    <p>
+      KBS also makes use of a number of independent components provided under
+      other licenses:
+    </p>
 
-<table>
-    <tbody>
-    <tr>
-        <th>Component</th>
-        <th>Usage</th>
-        <th>Project</th>
-        <th>License</th>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Browser VM</td>
-        <td><a href="https://bellard.org/TinyEmu/">TinyEmu</a>/<a href="https://bellard.org/jslinux/">JSLinux</a></td>
-        <td><a href="https://opensource.org/license/MIT">MIT</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Bootloader</td>
-        <td>pk/bbl</td>
-        <td>Multiple: <a href="https://github.com/riscv-software-src/riscv-pk/blob/master/LICENSE">1</a> <a href="https://github.com/riscv-software-src/riscv-pk/blob/master/LICENSE.Batten">2</a></td>
-        <!-- This version of BBL doesn't have the logo, so we don't have to deal with a THIRD license for this one bin -->
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>OS Kernel</td>
-        <td>Linux</td>
-        <td><a href="https://opensource.org/license/gpl-2-0">GPL-2.0</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>C Standard Library</td>
-        <td>uClibC</td>
-        <td><a href="https://opensource.org/license/lgpl-2-1">LGPL-2.1</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>C/++ Runtime</td>
-        <td>gcc runtime</td>
-        <td><a href="https://opensource.org/license/gpl-3-0">GPL-3.0</a> with <a href="https://www.gnu.org/licenses/gcc-exception-3.1.html">runtime exception</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Userland</td>
-        <td>Busybox</td>
-        <td><a href="https://opensource.org/license/gpl-2-0">GPL-2.0</a></td>
-    </tr>
-    <!-- We don't actually have bzip or any of these enabled
+    <table>
+      <tbody>
+        <tr>
+          <th>Component</th>
+          <th>Usage</th>
+          <th>Project</th>
+          <th>License</th>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Browser VM</td>
+          <td>
+            <a href="https://bellard.org/TinyEmu/">TinyEmu</a>/<a
+              href="https://bellard.org/jslinux/"
+              >JSLinux</a
+            >
+          </td>
+          <td><a href="https://opensource.org/license/MIT">MIT</a></td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Bootloader</td>
+          <td>pk/bbl</td>
+          <td>
+            Multiple:
+            <a
+              href="https://github.com/riscv-software-src/riscv-pk/blob/master/LICENSE"
+              >1</a
+            >
+            <a
+              href="https://github.com/riscv-software-src/riscv-pk/blob/master/LICENSE.Batten"
+              >2</a
+            >
+          </td>
+          <!-- This version of BBL doesn't have the logo, so we don't have to deal with a THIRD license for this one bin -->
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>OS Kernel</td>
+          <td>Linux</td>
+          <td><a href="https://opensource.org/license/gpl-2-0">GPL-2.0</a></td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>C Standard Library</td>
+          <td>uClibC</td>
+          <td>
+            <a href="https://opensource.org/license/lgpl-2-1">LGPL-2.1</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>C/++ Runtime</td>
+          <td>gcc runtime</td>
+          <td>
+            <a href="https://opensource.org/license/gpl-3-0">GPL-3.0</a> with
+            <a href="https://www.gnu.org/licenses/gcc-exception-3.1.html"
+              >runtime exception</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Userland</td>
+          <td>Busybox</td>
+          <td><a href="https://opensource.org/license/gpl-2-0">GPL-2.0</a></td>
+        </tr>
+        <!-- We don't actually have bzip or any of these enabled
     <tr>
         <td>Menuconfig</td>
         <td>archives in userland</td>
@@ -75,53 +109,71 @@
         <td><a href="https://opensource.org/license/gpl-2-0">GPL-2.0</a></td>
     </tr>
     -->
-    <tr>
-        <td>Menuconfig</td>
-        <td>Library</td>
-        <td>libffi</td>
-        <td><a href="https://raw.githubusercontent.com/libffi/libffi/refs/heads/master/LICENSE">MIT</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Library</td>
-        <td>zlib</td>
-        <td><a href="https://zlib.net/zlib_license.html">zlib license</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Terminal Display Library</td>
-        <td>ncurses</td>
-        <td><a href="https://invisible-island.net/ncurses/ncurses-license.html">ncurses License</a> (it's a bit complicated)</td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Python</td>
-        <td>CPython</td>
-        <td><a href="https://opensource.org/license/python-2-0">PSF-2.0</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>kconfig implementation</td>
-        <td>kconfiglib (Klipper)</td>
-        <td><a href="https://opensource.org/license/isc-license-txt">ISC</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Web Terminal</td>
-        <td>xterm.js</td>
-        <td><a href="https://github.com/xtermjs/xterm.js/blob/master/LICENSE">MIT</a></td>
-    </tr>
-    <tr>
-        <td>Menuconfig</td>
-        <td>Klipper/Kalico version icons</td>
-        <td>solacon</td>
-        <td><a href="solacon/LICENSE">MIT</a></td>
-    </tr>
-    </tbody>
-</table>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Library</td>
+          <td>libffi</td>
+          <td>
+            <a
+              href="https://raw.githubusercontent.com/libffi/libffi/refs/heads/master/LICENSE"
+              >MIT</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Library</td>
+          <td>zlib</td>
+          <td><a href="https://zlib.net/zlib_license.html">zlib license</a></td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Terminal Display Library</td>
+          <td>ncurses</td>
+          <td>
+            <a href="https://invisible-island.net/ncurses/ncurses-license.html"
+              >ncurses License</a
+            >
+            (it's a bit complicated)
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Python</td>
+          <td>CPython</td>
+          <td>
+            <a href="https://opensource.org/license/python-2-0">PSF-2.0</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>kconfig implementation</td>
+          <td>kconfiglib (Klipper)</td>
+          <td>
+            <a href="https://opensource.org/license/isc-license-txt">ISC</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Web Terminal</td>
+          <td>xterm.js</td>
+          <td>
+            <a href="https://github.com/xtermjs/xterm.js/blob/master/LICENSE"
+              >MIT</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Menuconfig</td>
+          <td>Klipper/Kalico version icons</td>
+          <td>solacon</td>
+          <td><a href="solacon/LICENSE">MIT</a></td>
+        </tr>
+      </tbody>
+    </table>
 
-<h3>FAQs</h3>
-<pre>
+    <h3>FAQs</h3>
+    <pre>
 Q: Why is this page unstyled, and most of the projects don't have links?
 A: Identifying licenses for these projects was far more of a pain than I expected, so I couldn't be bothered.
 
@@ -145,6 +197,7 @@ Q: Do you feel that you have complied with the licenses of the projects KBS uses
 A: Before I wrote this page, I thought I was pretty much safe.
    Having looked deeper, I can say I am not at all qualified to answer that question.
    Though I am pretty sure that I am compliant, at least as much as a layperson like myself ever can be.
-</pre>
-</body>
+</pre
+    >
+  </body>
 </html>
