doc: add warning about rawness to index

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>K. Build System</h1>
+    <p><em>IMPORTANT:</em> Everything here is alpha-quality at best, and nowhere near ready for actual use. Expect strange broken things</p>
     <ul>
       <li><a href="kconfig.html">Menuconfig</a></li>
       <li><a href="license.html">License info</a></li>
